--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,14 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>{{ title }}</title>
-    {{{ renderResourceHints() }}}
-    {{{ renderStyles() }}}
+    <title>UTILA.coffee</title>
   </head>
   <body>
-    <!--vue-ssr-outlet-->
-    {{{ renderState() }}}
-    {{{ renderState({ contextKey: 'apolloState', windowKey: '__APOLLO_STATE__' }) }}}
-    {{{ renderScripts() }}}
+    <noscript>
+      <strong>We're sorry but uc doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
   </body>
 </html>
